--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
   },
   "homepage": "https://github.com/epr3/vue-cli-plugin-playwright-e2e#readme",
   "dependencies": {
-    "@vue/cli-shared-utils": "^4.5.10",
+    "@vue/cli-plugin-webpack-4": "^5.0.0-alpha.2",
+    "@vue/cli-shared-utils": "^5.0.0-alpha.2",
+    "deepmerge": "^1.5.2",
     "jest": "^26.6.3",
+    "jest-playwright-preset": "^1.4.4",
+    "jest-watch-typeahead": "^0.6.1",
     "mocha": "^8.2.1",
     "mochapack": "^2.0.6",
-    "playwright": "^1.7.1"
+    "playwright": "^1.7.1",
+    "ts-jest": "^26.4.4"
   },
   "devDependencies": {
-    "@vue/test-utils": "^1.1.2",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
